# statistical-learning-method-solutions-manual

./: .gitignore  README.md  package-lock.json  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
codes/ch02/: perceptron.py
codes/ch03/: k_neighbors_classifier.py  my_kd_tree.py
codes/ch05/: decision_tree_demo.py
codes/ch06/: maxent_dfp.py  my_logistic_regression.py
codes/ch07/: svm_demo.py
codes/ch09/: gmm_demo.py
codes/ch10/: hidden_markov_backward.py
codes/ch14/: divisive_clustering.py
codes/ch19/: gibbs_sampling.py  metropolis_hastings.py
codes/ch24/: cnn-text-classification.py
codes/ch26/: lstm_seq2seq.py
codes/ch27/: bi-lstm-text-classification.py
docs/: index.md
docs/.vitepress/: config.mts
docs/.vitepress/theme/: custom.css
docs/chapter01/: ch01.md
docs/chapter02/: ch02.md
docs/chapter05/: ch05.md
docs/chapter11/: ch11.md
docs/chapter15/: ch15.md
docs/chapter17/: ch17.md
docs/chapter20/: ch20.md
docs/chapter23/: ch23.md
notebook/part01/notes/: ch01.ipynb  ch02.ipynb  ch03.ipynb  ch05.ipynb  ch06.ipynb  ch07.ipynb  ch08.ipynb  ch09.ipynb  ch10.ipynb  ch11.ipynb
notebook/part02/: ch14.ipynb  ch15.ipynb  ch16.ipynb  ch17.ipynb  ch18.ipynb  ch19.ipynb  ch20.ipynb  ch21.ipynb
notebook/part03/notes/: ch23.ipynb  ch24.ipynb  ch25.ipynb  ch26.ipynb  ch27.ipynb  ch28.ipynb
notebook/part04/notes/: ch34.ipynb
